5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1596_1015.log
== TEST (2019-03-26 19:16:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n_inteiros1 = int(input("primeiro numero"))
n_inteiros2 = int(input("segundo numero"))
n_inteiros3 = int(input("terceiro numero"))
n_max = max(n_inteiros1,n_ineteiros2,n_inteiros3)
n_min = min(n_inteiros1,n_ineteiros2,n_inteiros3)
n_medio = (n_inteiros1 + n_ineteiros2 + n_inteiros3) - (n_max + n_min)
print(n_min)
print(n_medio)
print(numero_max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n_max = max(n_inteiros1,n_ineteiros2,n_inteiros3)
NameError: name 'n_ineteiros2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:17:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n_inteiros1 = int(input("primeiro numero"))
n_inteiros2 = int(input("segundo numero"))
n_inteiros3 = int(input("terceiro numero"))
n_max = max(n_inteiros1,n_inteiros2,n_inteiros3)
n_min = min(n_inteiros1,n_ineteiros2,n_inteiros3)
n_medio = (n_inteiros1 + n_ineteiros2 + n_inteiros3) - (n_max + n_min)
print(n_min)
print(n_medio)
print(numero_max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n_min = min(n_inteiros1,n_ineteiros2,n_inteiros3)
NameError: name 'n_ineteiros2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:18:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n_inteiros1 = int(input("primeiro numero"))
n_inteiros2 = int(input("segundo numero"))
n_inteiros3 = int(input("terceiro numero"))
n_max = max(n_inteiros1,n_inteiros2,n_inteiros3)
n_min = min(n_inteiros1,n_inteiros2,n_inteiros3)
n_medio = (n_inteiros1 + n_inteiros2 + n_inteiros3) - (n_max + n_min)
print(n_min)
print(n_medio)
print(numero_max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(numero_max)
NameError: name 'numero_max' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:18:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n_inteiros1 = int(input("primeiro numero"))
n_inteiros2 = int(input("segundo numero"))
n_inteiros3 = int(input("terceiro numero"))
n_max = max(n_inteiros1,n_inteiros2,n_inteiros3)
n_min = min(n_inteiros1,n_inteiros2,n_inteiros3)
n_medio = (n_inteiros1 + n_inteiros2 + n_inteiros3) - (n_max + n_min)
print(n_min)
print(n_medio)
print(numero_max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(numero_max)
NameError: name 'numero_max' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:18:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n_inteiros1 = int(input("primeiro numero"))
n_inteiros2 = int(input("segundo numero"))
n_inteiros3 = int(input("terceiro numero"))
n_max = max(n_inteiros1,n_inteiros2,n_inteiros3)
n_min = min(n_inteiros1,n_inteiros2,n_inteiros3)
n_medio = (n_inteiros1 + n_inteiros2 + n_inteiros3) - (n_max + n_min)
print(n_min)
print(n_medio)
print(n_max)

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:18:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n_inteiros1 = int(input("primeiro numero"))
n_inteiros2 = int(input("segundo numero"))
n_inteiros3 = int(input("terceiro numero"))
n_max = max(n_inteiros1,n_inteiros2,n_inteiros3)
n_min = min(n_inteiros1,n_inteiros2,n_inteiros3)
n_medio = (n_inteiros1 + n_inteiros2 + n_inteiros3) - (n_max + n_min)
print(n_min)
print(n_medio)
print(n_max)

-- EXECUTION TIME:
0.154124
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
